--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,12 +20,12 @@ phases:
     commands:
       ### Building the image
       - echo Build started on `date`
-      - docker image build -t flaskapp:v1 .
+      - docker image build -t flaskapp:$(date +%Y%m%d).$CODEBUILD_BUILD_NUMBER .
       # - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - docker tag flaskapp:v1 $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/flaskapp:v1
+      - docker tag flaskapp:$(date +%Y%m%d).$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/flaskapp:$(date +%Y%m%d).$CODEBUILD_BUILD_NUMBER
       - echo Build completed on `date`
   post_build:
     commands:
       ### Publish the docker image to ECR
       - echo Pushing the Docker image to the ECR repo...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/flaskapp:v1
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/flaskapp:$(date +%Y%m%d).$CODEBUILD_BUILD_NUMBER
